fixed overall theme and webpages

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon | BagItUp</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="coming-soon-new.css">
 </head>
 
 <body>
-    <!-- Navigation Bar -->
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="images/logo.png" alt="Logo" /></a></div>
+            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search eco-friendly products...">
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
@@ -25,7 +24,6 @@
         </nav>
     </div>
 
-    <!-- Page Content -->
     <div class="page-container">
         <div class="coming-soon-content">
             <h1 class="coming-soon-title">Coming Soon</h1>
