--- a/home.html
+++ b/home.html
@@ -9,155 +9,62 @@
 </head>
 
 <body>
-    <!-- Snow Stars Animation -->
-    <div class="snow-stars"></div>
-    <div class="snow-stars snow-stars-2"></div>
-    <div class="snow-stars snow-stars-3"></div>
-    <div class="snow-stars snow-stars-4"></div>
-    <div class="snow-stars snow-stars-5"></div>
-
-    <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><img src="images/newlogo.png" alt="Logo" /></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Explore our latest sustainable designs">
-                <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
+    <div class="hero-container">
+        <nav class="top-nav">
+            <div class="nav-left">
+                <a href="menswear/mens-shirts.html" class="nav-link">SHIRTS</a>
+                <a href="menswear/mens-tshirts.html" class="nav-link">T-SHIRTS</a>
+                <a href="menswear/jackets.html" class="nav-link">JACKETS</a>
+                <a href="menswear/mens-jeans.html" class="nav-link">BOTTOMS</a>
             </div>
-            <div class="nav-icons">
-                <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="login.html" class="sign-in-btn">Sign In</a>
-                <div class="menu-container">
-                    <button class="menu-btn" id="menu-btn">
-                        <img src="images/3_lines_icon-removebg-preview.png" alt="Menu" class="menu-icon">
-                    </button>
-                    <div class="menu-dropdown">
-                        <a href="#settings" class="menu-item">
-                            <img src="images/settingixon.png" alt="Settings" class="menu-item-icon">
-                            <span>Settings</span>
-                        </a>
-                        <a href="#orders" class="menu-item">
-                            <img src="images/myorder.png" alt="Orders" class="menu-item-icon">
-                            <span>My Orders</span>
-                        </a>
-                        <a href="#addresses" class="menu-item">
-                            <img src="images/address.png" alt="Addresses" class="menu-item-icon">
-                            <span>Saved Addresses</span>
-                        </a>
-                    </div>
-                </div>
+
+            <div class="brand-logo">
+                <h1>BAGITUP</h1>
+            </div>
+
+            <div class="nav-right">
+                <a href="/Users/arpittripathi/Desktop/Projects/CAPSTONE/footwear/footwear.html"
+                    class="nav-link">FOOTWEAR</a>
+                <a href="coming-soon.html" class="nav-link">ACCESSORIES</a>
+                <a href="login.html" class="sign-in-button">SIGN IN / UP</a>
+                <a href="addtocart.html" class="cart-button">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path
+                            d="M16 16C14.89 16 14 16.89 14 18C14 19.11 14.89 20 16 20C17.11 20 18 19.11 18 18C18 16.89 17.11 16 16 16ZM0 0V2H2L5.6 9.59L4.25 12.04C4.09 12.32 4 12.65 4 13C4 14.11 4.89 15 6 15H18V13H6.42C6.28 13 6.17 12.89 6.17 12.75L6.2 12.63L7.1 11H14.55C15.3 11 15.96 10.59 16.3 9.97L19.88 3.48C19.96 3.34 20 3.17 20 3C20 2.45 19.55 2 19 2H4.21L3.27 0H0ZM6 16C4.89 16 4 16.89 4 18C4 19.11 4.89 20 6 20C7.11 20 8 19.11 8 18C8 16.89 7.11 16 6 16Z"
+                            fill="currentColor" />
+                    </svg>
+                </a>
             </div>
         </nav>
-    </div>
 
-    <!-- Categories Navigation -->
-    <div class="categories-container">
-        <nav class="categories-nav">
-            <div class="category-item">
-                <span class="category-title">Men's Wear</span>
-                <div class="dropdown">
-                    <a href="menswear/mens-tshirts.html">T-Shirts</a>
-                    <a href="menswear/mens-shirts.html">Shirts</a>
-                    <a href="menswear/mens-jeans.html">Jeans</a>
-                    <a href="coming-soon.html">Jackets</a>
-                    <a href="coming-soon.html">Activewear</a>
+        <div class="hero-content">
+            <div class="testimonial-section">
+                <div class="testimonial-avatars">
+                    <img src="images/avatar1.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
+                    <img src="images/avatar2.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
+                    <img src="images/avatar3.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
                 </div>
+                <p class="testimonial-text">Stay cozy without compromising your range of motion. Our sustainable fashion
+                    range is perfect for those eco-conscious wardrobes.</p>
             </div>
 
-            <div class="category-item">
-                <span class="category-title">Women's Wear</span>
-                <div class="dropdown">
-                    <a href="womens-tops.html">Tops & Tees</a>
-                    <a href="coming-soon.html">Dresses</a>
-                    <a href="coming-soon.html">Ethnic Wear</a>
-                    <a href="coming-soon.html">Jeans & Bottoms</a>
-                    <a href="coming-soon.html">Activewear</a>
+            <div class="hero-center">
+                <h2 class="hero-title">GEAR UP EVERY SEASON<br>EVERY WARDROBE!</h2>
+                <div class="hero-buttons">
+                    <a href="menswear/mens-tshirts.html" class="btn btn-primary">SHOP NOW</a>
+                    <a href="new-arrivals.html" class="btn btn-secondary">EXPLORE ALL</a>
                 </div>
+                <img src="images/subject-removebg-preview (1).png" alt="Model" class="hero-model-image">
             </div>
 
-            <div class="category-item">
-                <span class="category-title">Footwear</span>
-                <div class="dropdown">
-                    <a href="coming-soon.html">Men's Shoes</a>
-                    <a href="coming-soon.html">Women's Shoes</a>
-                    <a href="coming-soon.html">Sneakers</a>
-                    <a href="coming-soon.html">Sandals & Flats</a>
-                </div>
-            </div>
-
-            <div class="category-item">
-                <span class="category-title">Accessories</span>
-                <div class="dropdown">
-                    <a href="coming-soon.html">Bags & Wallets</a>
-                    <a href="coming-soon.html">Belts</a>
-                    <a href="coming-soon.html">Sunglasses</a>
-                    <a href="coming-soon.html">Watches</a>
-                    <a href="coming-soon.html">Caps & Hats</a>
-                </div>
-            </div>
-
-            <div class="category-item">
-                <span class="category-title">Home & Lifestyle</span>
-                <div class="dropdown">
-                    <a href="coming-soon.html">Eco Decor</a>
-                    <a href="coming-soon.html">Reusable Storage</a>
-                    <a href="coming-soon.html">Stationery & Organizers</a>
-                </div>
-            </div>
-
-            <div class="category-item">
-                <span class="category-title">Trending</span>
-                <div class="dropdown">
-                    <a href="new-arrivals.html">New Arrivals</a>
-                    <a href="coming-soon.html">Best Sellers</a>
-                    <a href="coming-soon.html">Seasonal Picks</a>
-                    <a href="coming-soon.html">Sustainable Edit</a>
-                </div>
-            </div>
-        </nav>
-    </div>
-
-    <main class="content">
-        <!-- Hero Section with Website Name -->
-        <div class="hero-section">
-            <!-- Left Product Card -->
-            <div class="product-showcase-card left-card">
-                <div class="image-rotator" id="left-rotator">
-                    <img src="images/beige-removebg-preview.png" alt="Beige Product" class="rotating-image active">
-                    <img src="images/blue-removebg-preview.png" alt="Blue Product" class="rotating-image">
-                    <img src="images/maroon-removebg-preview.png" alt="Maroon Product" class="rotating-image">
-                    <img src="images/shirt-removebg-preview.png" alt="Shirt Product" class="rotating-image">
-                    <img src="images/jacket-removebg-preview.png" alt="Jacket Product" class="rotating-image">
-                    <button class="nav-arrow nav-arrow-left" data-rotator="left-rotator"
-                        data-direction="prev">‹</button>
-                    <button class="nav-arrow nav-arrow-right" data-rotator="left-rotator"
-                        data-direction="next">›</button>
-                </div>
-            </div>
-
-            <!-- Center Title -->
-            <div class="center-title">
-                <h1 class="website-title">BagItUp</h1>
-                <p class="tagline">Style Meets Sustainability</p>
-                <div class="title-accent"></div>
-            </div>
-
-            <!-- Right Product Card -->
-            <div class="product-showcase-card right-card">
-                <div class="image-rotator" id="right-rotator">
-                    <img src="images/bluepant.png" alt="Blue Pant" class="rotating-image active">
-                    <img src="images/greeepant.png" alt="Green Pant" class="rotating-image">
-                    <img src="images/greypant.png" alt="Grey Pant" class="rotating-image">
-                    <img src="images/jogger.png" alt="Jogger" class="rotating-image">
-                    <img src="images/beige pant.png" alt="Beige Pant" class="rotating-image">
-                    <button class="nav-arrow nav-arrow-left" data-rotator="right-rotator"
-                        data-direction="prev">‹</button>
-                    <button class="nav-arrow nav-arrow-right" data-rotator="right-rotator"
-                        data-direction="next">›</button>
+            <div class="video-section">
+                <div class="video-placeholder" onclick="window.location.href='coming-soon.html'">
+                    <div class="play-button">▶</div>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+
     <script defer src="home.js"></script>
     <script defer src="image-rotator.js"></script>
 </body>
