--- a/menswear/mens-tshirts.html
+++ b/menswear/mens-tshirts.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's T-Shirts | BagItUp</title>
-    <link rel="stylesheet" href="../products.css">
+    <link rel="stylesheet" href="mens-tshirts.css">
     <script defer src="../products.js"></script>
 </head>
 
 <body>
-    <!-- Navigation Bar -->
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/logo.png" alt="Logo" /></a></div>
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search eco-friendly t-shirts...">
                 <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
@@ -26,7 +25,6 @@
         </nav>
     </div>
 
-    <!-- Page Content -->
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">Men's T-Shirts</h1>
@@ -36,11 +34,9 @@
 
         <div class="products-container">
             <div class="products-grid">
-                <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/tshirt1.webp"
-                            alt="Classic Cotton Crew Neck T-Shirt">
+                        <img src="../images/products/tshirt1.webp" alt="Classic Cotton Crew Neck T-Shirt">
                     </div>
                     <h3 class="product-name">Crew Neck</h3>
                     <div class="product-price">₹899</div>
@@ -52,11 +48,9 @@
                     </button>
                 </div>
 
-                <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/tshirt2.webp"
-                            alt="Modern V-Neck T-Shirt">
+                        <img src="../images/products/tshirt2.webp" alt="Modern V-Neck T-Shirt">
                     </div>
                     <h3 class="product-name">V-Neck</h3>
                     <div class="product-price">₹999</div>
@@ -68,11 +62,9 @@
                     </button>
                 </div>
 
-                <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-image product-image-polo">
-                        <img src="../images/products/tshirt3.png"
-                            alt="Classic Polo T-Shirt">
+                        <img src="../images/products/tshirt3.png" alt="Classic Polo T-Shirt">
                     </div>
                     <h3 class="product-name">Polo</h3>
                     <div class="product-price">₹1,299</div>
@@ -84,11 +76,9 @@
                     </button>
                 </div>
 
-                <!-- Product 4 -->
                 <div class="product-card">
                     <div class="product-image product-image-tshirt4">
-                        <img src="../images/products/tshirt 4.png"
-                            alt="Comfort Henley T-Shirt">
+                        <img src="../images/products/tshirt 4.png" alt="Comfort Henley T-Shirt">
                     </div>
                     <h3 class="product-name">Henley</h3>
                     <div class="product-price">₹1,199</div>
@@ -100,7 +90,6 @@
                     </button>
                 </div>
 
-                <!-- Product 5 -->
                 <div class="product-card">
                     <div class="product-image">Sport Raglan</div>
                     <h3 class="product-name">Raglan</h3>
@@ -113,7 +102,6 @@
                     </button>
                 </div>
 
-                <!-- Product 6 -->
                 <div class="product-card">
                     <div class="product-image">Street Oversized</div>
                     <h3 class="product-name">Oversized</h3>
@@ -129,7 +117,6 @@
         </div>
     </div>
 
-    <!-- Back to Home Button -->
     <a href="../home.html" class="back-home">← Back to Home</a>
 </body>
 
