--- a/new-arrivals.html
+++ b/new-arrivals.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Arrivals | BagItUp</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="trending.css">
 </head>
 
 <body>
-    <!-- Navigation Bar -->
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="images/logo.png" alt="Logo" /></a></div>
+            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search new arrivals...">
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
@@ -25,7 +24,6 @@
         </nav>
     </div>
 
-    <!-- Page Content -->
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">New Arrivals</h1>
@@ -35,7 +33,6 @@
 
         <div class="products-container">
             <div class="products-grid">
-                <!-- Product 1 -->
                 <div class="product-card">
                     <div class="product-image">Bio Fabric Jacket</div>
                     <h3 class="product-name">Bio-Fabric Tech Jacket</h3>
@@ -45,7 +42,6 @@
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
-                <!-- Product 2 -->
                 <div class="product-card">
                     <div class="product-image">Mushroom Leather Bag</div>
                     <h3 class="product-name">Mycelium Leather Tote</h3>
@@ -55,7 +51,6 @@
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
-                <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-image">Algae-Based Sneakers</div>
                     <h3 class="product-name">Algae Foam Sneakers</h3>
@@ -65,7 +60,6 @@
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
-                <!-- Product 4 -->
                 <div class="product-card">
                     <div class="product-image">Solar Charging Backpack</div>
                     <h3 class="product-name">Solar Panel Backpack</h3>
@@ -75,7 +69,6 @@
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
-                <!-- Product 5 -->
                 <div class="product-card">
                     <div class="product-image">Seaweed Fiber Dress</div>
                     <h3 class="product-name">Seaweed Fiber Dress</h3>
@@ -85,7 +78,6 @@
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
-                <!-- Product 6 -->
                 <div class="product-card">
                     <div class="product-image">Cork Yoga Mat</div>
                     <h3 class="product-name">Premium Cork Yoga Mat</h3>
@@ -98,7 +90,6 @@
         </div>
     </div>
 
-    <!-- Back to Home Button -->
     <a href="home.html" class="back-home">← Back to Home</a>
 </body>
 
