--- a/login.html
+++ b/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BagItUp | Login</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="login-new.css" />
 </head>
 
 <body>
     <div class="login-container">
         <div class="login-box">
-            <h1 class="logo"><img src="images/newlogo.png" alt="Logo" />BagItUp</h1>
+            <h1 class="logo"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" />BagItUp</h1>
             <h2>Welcome Back</h2>
             <p class="subtitle">Log in to continue shopping in style.</p>
 
