--- a/menswear/jackets.html
+++ b/menswear/jackets.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Jeans | BagItUp</title>
-    <link rel="stylesheet" href="mens-jeans.css">
+    <title>Men's Jackets | BagItUp</title>
+    <link rel="stylesheet" href="jackets.css">
     <script defer src="../products.js"></script>
 </head>
 
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
             <div class="search-bar">
-                <input type="text" id="search" placeholder="Search jeans...">
+                <input type="text" id="search" placeholder="Search jackets...">
                 <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
@@ -27,19 +27,19 @@
 
     <div class="page-container">
         <div class="page-header">
-            <h1 class="page-title">Men's Jeans</h1>
-            <p class="page-subtitle">Discover our range of premium denim jeans, crafted for comfort and durability.</p>
+            <h1 class="page-title">Men's Jackets</h1>
+            <p class="page-subtitle">Explore our premium collection of men's jackets, designed for style and comfort in every season.</p>
         </div>
 
         <div class="products-container">
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans1.png" alt="Slim Fit Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket1.png" alt="Denim Jacket">
                     </div>
-                    <h3 class="product-name">Slim Fit Jeans</h3>
-                    <div class="product-price">₹1,799</div>
-                    <p class="product-description">Modern slim fit jeans with stretch denim. Perfect for a contemporary look.</p>
+                    <h3 class="product-name">Denim Jacket</h3>
+                    <div class="product-price">₹2,499</div>
+                    <p class="product-description">Classic denim jacket with timeless style. Perfect for casual outings and layering.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -47,12 +47,12 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans2.png" alt="Regular Fit Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket2.png" alt="Bomber Jacket">
                     </div>
-                    <h3 class="product-name">Regular Fit Jeans</h3>
-                    <div class="product-price">₹1,599</div>
-                    <p class="product-description">Classic regular fit jeans for everyday comfort. Timeless style meets functionality.</p>
+                    <h3 class="product-name">Bomber Jacket</h3>
+                    <div class="product-price">₹2,999</div>
+                    <p class="product-description">Stylish bomber jacket with modern fit. Ideal for casual and semi-formal occasions.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -60,12 +60,12 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans3.png" alt="Skinny Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket3.png" alt="Leather Jacket">
                     </div>
-                    <h3 class="product-name">Skinny Jeans</h3>
-                    <div class="product-price">₹1,899</div>
-                    <p class="product-description">Trendy skinny fit jeans with premium stretch fabric. Modern style for the fashion-forward.</p>
+                    <h3 class="product-name">Leather Jacket</h3>
+                    <div class="product-price">₹4,999</div>
+                    <p class="product-description">Premium leather jacket with sleek design. A wardrobe essential for the modern man.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -73,12 +73,12 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans4.png" alt="Relaxed Fit Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket4.png" alt="Windbreaker">
                     </div>
-                    <h3 class="product-name">Relaxed Fit Jeans</h3>
-                    <div class="product-price">₹1,699</div>
-                    <p class="product-description">Comfortable relaxed fit jeans. Perfect for casual weekends and laid-back style.</p>
+                    <h3 class="product-name">Windbreaker</h3>
+                    <div class="product-price">₹1,999</div>
+                    <p class="product-description">Lightweight windbreaker for active lifestyles. Water-resistant and breathable.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -86,12 +86,12 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans5.png" alt="Bootcut Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket5.png" alt="Parka Jacket">
                     </div>
-                    <h3 class="product-name">Bootcut Jeans</h3>
-                    <div class="product-price">₹1,799</div>
-                    <p class="product-description">Classic bootcut style jeans. Versatile design for any occasion.</p>
+                    <h3 class="product-name">Parka Jacket</h3>
+                    <div class="product-price">₹3,499</div>
+                    <p class="product-description">Warm parka jacket for cold weather. Features insulated lining and hood.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -99,12 +99,12 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
-                        <img src="../images/products/jeans6.png" alt="Distressed Jeans">
+                    <div class="product-image-jacket">
+                        <img src="../images/products/jacket6.png" alt="Blazer">
                     </div>
-                    <h3 class="product-name">Distressed Jeans</h3>
-                    <div class="product-price">₹2,099</div>
-                    <p class="product-description">Edgy distressed jeans with rugged appeal. Make a bold fashion statement.</p>
+                    <h3 class="product-name">Blazer</h3>
+                    <div class="product-price">₹3,999</div>
+                    <p class="product-description">Smart casual blazer for formal occasions. Tailored fit with premium fabric.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
