--- a/menswear/mens-shirts.html
+++ b/menswear/mens-shirts.html
@@ -1,115 +1,232 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><!DOCTYPE html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Shirts | BagItUp</title>
-    <link rel="stylesheet" href="../products.css">
+<html lang="en"><html lang="en">
+
+
+
+<head><head>
+
+    <meta charset="UTF-8">    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Men's Shirts | BagItUp</title>    <title>Men's Shirts | BagItUp</title>
+
+    <link rel="stylesheet" href="mens-shirts.css">    <link rel="stylesheet" href="menswear.css">
+
+    <script defer src="../products.js"></script></head>
+
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <div class="navbar-container">
-        <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/logo.png" alt="Logo" /></a></div>
-            <div class="search-bar">
-                <input type="text" id="search" placeholder="Search eco-friendly shirts...">
-                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
-            </div>
-            <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
-                            alt="Cart" /></span></a>
-                <a href="../login.html" class="sign-in-btn">Sign In</a>
-            </div>
-        </nav>
+
+<body>    <div class="navbar-container">
+
+    <div class="navbar-container">        <nav class="navbar">
+
+        <nav class="navbar">            <div class="logo"><a href="../home.html"><img src="../images/logo.png" alt="Logo" /></a></div>
+
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>            <div class="search-bar">
+
+            <div class="search-bar">                <input type="text" id="search" placeholder="Search eco-friendly shirts...">
+
+                <input type="text" id="search" placeholder="Search shirts...">                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
+
+                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>            </div>
+
+            </div>            <div class="nav-icons">
+
+            <div class="nav-icons">                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
+
+                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"                            alt="Cart" /></span></a>
+
+                            alt="Cart" /></span></a>                <a href="../login.html" class="sign-in-btn">Sign In</a>
+
+                <a href="../login.html" class="sign-in-btn">Sign In</a>            </div>
+
+            </div>        </nav>
+
+        </nav>    </div>
+
     </div>
 
-    <!-- Page Content -->
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Men's Shirts</h1>
-            <p class="page-subtitle">Professional and casual shirts made from sustainable materials. Perfect for work, weekends, and everything in between.</p>
-        </div>
 
-        <div class="products-container">
-            <div class="products-grid">
-                <!-- Product 1 -->
-                <div class="product-card">
-                    <div class="product-image">Oxford Cotton Shirt</div>
-                    <h3 class="product-name">Organic Oxford Button-Down</h3>
-                    <div class="product-price">₹1,899</div>
-                    <p class="product-description">Classic oxford shirt made from 100% organic cotton. Perfect for business casual and weekend wear.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
+    <div class="page-container">        <div class="page-header">
 
-                <!-- Product 2 -->
-                <div class="product-card">
-                    <div class="product-image">Linen Dress Shirt</div>
-                    <h3 class="product-name">Eco-Linen Dress Shirt</h3>
+        <div class="page-header">            <h1 class="page-title">Men's Shirts</h1>
+
+            <h1 class="page-title">Men's Shirts</h1>            <p class="page-subtitle">Professional and casual shirts made from sustainable materials. Perfect for work,
+
+            <p class="page-subtitle">Explore our collection of premium men's shirts, designed for style and versatility.</p>                weekends, and everything in between.</p>
+
+        </div>        </div>
+
+
+
+        <div class="products-container">        <div class="products-container">
+
+            <div class="products-grid">            <div class="products-grid">
+
+                <div class="product-card">                <div class="product-card">
+
+                    <div class="product-image-shirt">                    <div class="product-image">Oxford Cotton Shirt</div>
+
+                        <img src="../images/products/shirt1.png" alt="Formal Shirt">                    <h3 class="product-name">Organic Oxford Button-Down</h3>
+
+                    </div>                    <div class="product-price">₹1,899</div>
+
+                    <h3 class="product-name">Formal Shirt</h3>                    <p class="product-description">Classic oxford shirt made from 100% organic cotton. Perfect for
+
+                    <div class="product-price">₹1,499</div>                        business casual and weekend wear.</p>
+
+                    <p class="product-description">Classic formal shirt perfect for office and business meetings. Crisp and professional.</p>                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                    <button class="add-to-cart-btn">                </div>
+
+                        <span class="button-text">Add to Cart</span>
+
+                        <span class="tick-mark">✓</span>                <div class="product-card">
+
+                    </button>                    <div class="product-image">Linen Dress Shirt</div>
+
+                </div>                    <h3 class="product-name">Eco-Linen Dress Shirt</h3>
+
                     <div class="product-price">₹2,199</div>
-                    <p class="product-description">Breathable organic linen dress shirt with a modern fit. Ideal for warm weather and formal occasions.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                <div class="product-card">                    <p class="product-description">Breathable organic linen dress shirt with a modern fit. Ideal for
+
+                    <div class="product-image-shirt">                        warm weather and formal occasions.</p>
+
+                        <img src="../images/products/shirt2.png" alt="Casual Shirt">                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                    </div>                </div>
+
+                    <h3 class="product-name">Casual Shirt</h3>
+
+                    <div class="product-price">₹1,299</div>                <div class="product-card">
+
+                    <p class="product-description">Relaxed casual shirt for weekend outings. Comfortable and stylish.</p>                    <div class="product-image">Bamboo Casual Shirt</div>
+
+                    <button class="add-to-cart-btn">                    <h3 class="product-name">Bamboo Casual Shirt</h3>
+
+                        <span class="button-text">Add to Cart</span>                    <div class="product-price">₹1,699</div>
+
+                        <span class="tick-mark">✓</span>                    <p class="product-description">Soft bamboo fiber shirt with natural antibacterial properties. Great
+
+                    </button>                        for casual outings and travel.</p>
+
+                </div>                    <button class="add-to-cart-btn">Add to Cart</button>
+
                 </div>
 
-                <!-- Product 3 -->
                 <div class="product-card">
-                    <div class="product-image">Bamboo Casual Shirt</div>
-                    <h3 class="product-name">Bamboo Casual Shirt</h3>
-                    <div class="product-price">₹1,699</div>
-                    <p class="product-description">Soft bamboo fiber shirt with natural antibacterial properties. Great for casual outings and travel.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
 
-                <!-- Product 4 -->
-                <div class="product-card">
-                    <div class="product-image">Hemp Blend Shirt</div>
-                    <h3 class="product-name">Hemp-Cotton Work Shirt</h3>
-                    <div class="product-price">₹1,999</div>
-                    <p class="product-description">Durable hemp-cotton blend work shirt. Gets softer with each wash and perfect for everyday wear.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
+                    <div class="product-image-shirt">                <div class="product-card">
 
-                <!-- Product 5 -->
-                <div class="product-card">
-                    <div class="product-image">Tencel Dress Shirt</div>
+                        <img src="../images/products/shirt3.png" alt="Oxford Shirt">                    <div class="product-image">Hemp Blend Shirt</div>
+
+                    </div>                    <h3 class="product-name">Hemp-Cotton Work Shirt</h3>
+
+                    <h3 class="product-name">Oxford Shirt</h3>                    <div class="product-price">₹1,999</div>
+
+                    <div class="product-price">₹1,699</div>                    <p class="product-description">Durable hemp-cotton blend work shirt. Gets softer with each wash and
+
+                    <p class="product-description">Premium Oxford shirt with button-down collar. Versatile for any occasion.</p>                        perfect for everyday wear.</p>
+
+                    <button class="add-to-cart-btn">                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                        <span class="button-text">Add to Cart</span>                </div>
+
+                        <span class="tick-mark">✓</span>
+
+                    </button>                <div class="product-card">
+
+                </div>                    <div class="product-image">Tencel Dress Shirt</div>
+
                     <h3 class="product-name">Tencel Formal Shirt</h3>
-                    <div class="product-price">₹2,399</div>
-                    <p class="product-description">Premium Tencel Lyocell dress shirt with excellent drape and moisture-wicking properties.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
 
-                <!-- Product 6 -->
-                <div class="product-card">
-                    <div class="product-image">Flannel Shirt</div>
-                    <h3 class="product-name">Organic Cotton Flannel</h3>
+                <div class="product-card">                    <div class="product-price">₹2,399</div>
+
+                    <div class="product-image-shirt">                    <p class="product-description">Premium Tencel Lyocell dress shirt with excellent drape and
+
+                        <img src="../images/products/shirt4.png" alt="Linen Shirt">                        moisture-wicking properties.</p>
+
+                    </div>                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                    <h3 class="product-name">Linen Shirt</h3>                </div>
+
                     <div class="product-price">₹1,799</div>
-                    <p class="product-description">Cozy organic cotton flannel shirt perfect for cooler weather and layering.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
 
-                <!-- Product 7 -->
-                <div class="product-card">
-                    <div class="product-image">Denim Shirt</div>
-                    <h3 class="product-name">Eco-Denim Shirt</h3>
-                    <div class="product-price">₹2,099</div>
-                    <p class="product-description">Sustainable denim shirt made from recycled cotton. Classic style with modern eco-conscious materials.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
+                    <p class="product-description">Breathable linen shirt for warm weather. Light and comfortable.</p>                <div class="product-card">
 
-                <!-- Product 8 -->
-                <div class="product-card">
+                    <button class="add-to-cart-btn">                    <div class="product-image">Flannel Shirt</div>
+
+                        <span class="button-text">Add to Cart</span>                    <h3 class="product-name">Organic Cotton Flannel</h3>
+
+                        <span class="tick-mark">✓</span>                    <div class="product-price">₹1,799</div>
+
+                    </button>                    <p class="product-description">Cozy organic cotton flannel shirt perfect for cooler weather and
+
+                </div>                        layering.</p>
+
+                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                <div class="product-card">                </div>
+
+                    <div class="product-image-shirt">
+
+                        <img src="../images/products/shirt5.png" alt="Checkered Shirt">                <div class="product-card">
+
+                    </div>                    <div class="product-image">Denim Shirt</div>
+
+                    <h3 class="product-name">Checkered Shirt</h3>                    <h3 class="product-name">Eco-Denim Shirt</h3>
+
+                    <div class="product-price">₹1,399</div>                    <div class="product-price">₹2,099</div>
+
+                    <p class="product-description">Trendy checkered shirt for casual wear. Classic pattern with modern fit.</p>                    <p class="product-description">Sustainable denim shirt made from recycled cotton. Classic style with
+
+                    <button class="add-to-cart-btn">                        modern eco-conscious materials.</p>
+
+                        <span class="button-text">Add to Cart</span>                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                        <span class="tick-mark">✓</span>                </div>
+
+                    </button>
+
+                </div>                <div class="product-card">
+
                     <div class="product-image">Chambray Shirt</div>
-                    <h3 class="product-name">Organic Chambray Shirt</h3>
-                    <div class="product-price">₹1,599</div>
-                    <p class="product-description">Light and versatile organic chambray shirt. Perfect for smart-casual occasions and layering.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
+
+                <div class="product-card">                    <h3 class="product-name">Organic Chambray Shirt</h3>
+
+                    <div class="product-image-shirt">                    <div class="product-price">₹1,599</div>
+
+                        <img src="../images/products/shirt6.png" alt="Denim Shirt">                    <p class="product-description">Light and versatile organic chambray shirt. Perfect for smart-casual
+
+                    </div>                        occasions and layering.</p>
+
+                    <h3 class="product-name">Denim Shirt</h3>                    <button class="add-to-cart-btn">Add to Cart</button>
+
+                    <div class="product-price">₹1,599</div>                </div>
+
+                    <p class="product-description">Rugged denim shirt for casual style. Durable and timeless.</p>            </div>
+
+                    <button class="add-to-cart-btn">        </div>
+
+                        <span class="button-text">Add to Cart</span>    </div>
+
+                        <span class="tick-mark">✓</span>
+
+                    </button>    <a href="../home.html" class="back-home">← Back to Home</a>
+
+                </div></body>
+
             </div>
-        </div>
+
+        </div></html>
     </div>
 
-    <!-- Back to Home Button -->
     <a href="../home.html" class="back-home">← Back to Home</a>
 </body>
 
