--- a/menswear/jackets.html
+++ b/menswear/jackets.html
@@ -12,7 +12,8 @@
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+                        alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search jackets...">
                 <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
@@ -28,7 +29,8 @@
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">Men's Jackets</h1>
-            <p class="page-subtitle">Explore our premium collection of men's jackets, designed for style and comfort in every season.</p>
+            <p class="page-subtitle">Explore our premium collection of men's jackets, designed for style and comfort in
+                every season.</p>
         </div>
 
         <div class="products-container">
@@ -39,7 +41,8 @@
                     </div>
                     <h3 class="product-name">Denim Jacket</h3>
                     <div class="product-price">₹2,499</div>
-                    <p class="product-description">Classic denim jacket with timeless style. Perfect for casual outings and layering.</p>
+                    <p class="product-description">Classic denim jacket with timeless style. Perfect for casual outings
+                        and layering.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -52,7 +55,8 @@
                     </div>
                     <h3 class="product-name">Bomber Jacket</h3>
                     <div class="product-price">₹2,999</div>
-                    <p class="product-description">Stylish bomber jacket with modern fit. Ideal for casual and semi-formal occasions.</p>
+                    <p class="product-description">Stylish bomber jacket with modern fit. Ideal for casual and
+                        semi-formal occasions.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -65,7 +69,8 @@
                     </div>
                     <h3 class="product-name">Leather Jacket</h3>
                     <div class="product-price">₹4,999</div>
-                    <p class="product-description">Premium leather jacket with sleek design. A wardrobe essential for the modern man.</p>
+                    <p class="product-description">Premium leather jacket with sleek design. A wardrobe essential for
+                        the modern man.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -78,7 +83,8 @@
                     </div>
                     <h3 class="product-name">Windbreaker</h3>
                     <div class="product-price">₹1,999</div>
-                    <p class="product-description">Lightweight windbreaker for active lifestyles. Water-resistant and breathable.</p>
+                    <p class="product-description">Lightweight windbreaker for active lifestyles. Water-resistant and
+                        breathable.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -91,7 +97,8 @@
                     </div>
                     <h3 class="product-name">Parka Jacket</h3>
                     <div class="product-price">₹3,499</div>
-                    <p class="product-description">Warm parka jacket for cold weather. Features insulated lining and hood.</p>
+                    <p class="product-description">Warm parka jacket for cold weather. Features insulated lining and
+                        hood.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -104,7 +111,8 @@
                     </div>
                     <h3 class="product-name">Blazer</h3>
                     <div class="product-price">₹3,999</div>
-                    <p class="product-description">Smart casual blazer for formal occasions. Tailored fit with premium fabric.</p>
+                    <p class="product-description">Smart casual blazer for formal occasions. Tailored fit with premium
+                        fabric.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
