--- a/menswear/mens-jeans.html
+++ b/menswear/mens-jeans.html
@@ -12,7 +12,8 @@
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+                        alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search jeans...">
                 <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
@@ -39,7 +40,8 @@
                     </div>
                     <h3 class="product-name">Slim Fit Jeans</h3>
                     <div class="product-price">₹1,799</div>
-                    <p class="product-description">Modern slim fit jeans with stretch denim. Perfect for a contemporary look.</p>
+                    <p class="product-description">Modern slim fit jeans with stretch denim. Perfect for a contemporary
+                        look.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -52,7 +54,8 @@
                     </div>
                     <h3 class="product-name">Regular Fit Jeans</h3>
                     <div class="product-price">₹1,599</div>
-                    <p class="product-description">Classic regular fit jeans for everyday comfort. Timeless style meets functionality.</p>
+                    <p class="product-description">Classic regular fit jeans for everyday comfort. Timeless style meets
+                        functionality.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -65,7 +68,8 @@
                     </div>
                     <h3 class="product-name">Skinny Jeans</h3>
                     <div class="product-price">₹1,899</div>
-                    <p class="product-description">Trendy skinny fit jeans with premium stretch fabric. Modern style for the fashion-forward.</p>
+                    <p class="product-description">Trendy skinny fit jeans with premium stretch fabric. Modern style for
+                        the fashion-forward.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -78,7 +82,8 @@
                     </div>
                     <h3 class="product-name">Relaxed Fit Jeans</h3>
                     <div class="product-price">₹1,699</div>
-                    <p class="product-description">Comfortable relaxed fit jeans. Perfect for casual weekends and laid-back style.</p>
+                    <p class="product-description">Comfortable relaxed fit jeans. Perfect for casual weekends and
+                        laid-back style.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -104,7 +109,8 @@
                     </div>
                     <h3 class="product-name">Distressed Jeans</h3>
                     <div class="product-price">₹2,099</div>
-                    <p class="product-description">Edgy distressed jeans with rugged appeal. Make a bold fashion statement.</p>
+                    <p class="product-description">Edgy distressed jeans with rugged appeal. Make a bold fashion
+                        statement.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
