--- a/new-arrivals.html
+++ b/new-arrivals.html
@@ -11,7 +11,8 @@
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
+            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a>
+            </div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search new arrivals...">
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
